[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/trigger_zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/death_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/audio/crusher.wav" type="AudioStream" id=3]
[ext_resource path="res://enemies/crusher.gd" type="Script" id=4]
[ext_resource path="res://player/player_future_shader.tres" type="Material" id=5]

[node name="crusher" type="Node2D"]
material = ExtResource( 5 )
script = ExtResource( 4 )

[node name="trigger_zone" parent="." instance=ExtResource( 1 )]
position = Vector2( -1, 0 )

[node name="floor_part" type="KinematicBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, 2 )
collision_layer = 1024
collision_mask = 1026
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="TextureRect" parent="floor_part"]
use_parent_material = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collision" type="CollisionShape2D" parent="floor_part"]

[node name="death_zone" parent="floor_part" instance=ExtResource( 2 )]
position = Vector2( 1, -2 )

[node name="top_part" type="KinematicBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -2 )
collision_layer = 1024
collision_mask = 1026
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="TextureRect" parent="top_part"]
use_parent_material = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collision" type="CollisionShape2D" parent="top_part"]

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -0.1

[connection signal="area_entered" from="trigger_zone" to="." method="_on_trigger_zone_area_entered"]

[editable path="trigger_zone"]
[editable path="floor_part/death_zone"]
